change assets locate

--- a/pages/ransomware.html
+++ b/pages/ransomware.html
@@ -99,6 +99,6 @@
         <div class="timer" id="timer">남은 시간: 60초</div>
         <button class="exit-btn" onclick="exitSimulation()">운영진: 시뮬레이션 종료</button>
     </div>
-    <audio id="alertSound" src="/new_smising/assets/alert.mp3" autoplay loop></audio>
+    <audio id="alertSound" src="../assets/alert.mp3" autoplay loop></audio>
 </body>
 </html>
