--- a/pages/ransomware.html
+++ b/pages/ransomware.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>랜섬웨어 경고</title>
-    <style>
+    <!-- <style>
         body { background: #000; color: #f00; text-align: center; font-family: Arial, sans-serif; margin: 0; height: 100vh; overflow: hidden; }
         .warning { margin-top: 20vh; }
         .warning h1 { font-size: 36px; animation: blink 1s infinite; }
@@ -90,15 +90,18 @@
             }
             window.close();
         }
-    </script>
+    </script> -->
 </head>
 <body>
-    <div class="warning">
+    <h1>
+        더이상 사용안할 예정
+    </h1>
+    <!-- <div class="warning">
         <h1>모든 파일이 암호화되었습니다!</h1>
         <p>0000 비트코인을 지불하십시오. 지불하지 않으면 파일을 영원히 잃습니다.</p> 
         <div class="timer" id="timer">남은 시간: 60초</div>
         <button class="exit-btn" onclick="exitSimulation()">운영진: 시뮬레이션 종료</button>
     </div>
-    <audio id="alertSound" src="../assets/alert.mp3" autoplay loop></audio>
+    <audio id="alertSound" src="../assets/alert.mp3" autoplay loop></audio> -->
 </body>
 </html>
