--- a/pages/monitor.html
+++ b/pages/monitor.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -38,4 +38,5 @@
         <tbody></tbody>
     </table>
 </body>
-</html>
+</html> -->
+<!-- 더 이상 사용 하지 않는 파일 -->
