모니터.html 파일 재사용으로 인한 복구

--- a/pages/monitor.html
+++ b/pages/monitor.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -39,4 +39,4 @@
     </table>
 </body>
 </html> -->
-<!-- 더 이상 사용 하지 않는 파일 -->
+<!-- 더 이상 사용 하지 않는 파일
